Fixed odd whitespacing at page bottom and overlay blocking input on refresh

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  min-height: 100vh;
   background-color: #cacbcc;
   background-image: url("https://www.transparenttextures.com/patterns/egg-shell.png");
 }
