--- a/src/buildings.css
+++ b/src/buildings.css
@@ -78,7 +78,7 @@
 
 .BannerBody {
     border-bottom-style: solid; 
-    margin: 0px 200px 50px 200px;
+    margin: 0px 200px 0px 200px;
     padding-left: 30px;
     text-align: start;
     font-size: 20px;
